--- a/styles/sections/hero.css
+++ b/styles/sections/hero.css
@@ -38,6 +38,6 @@
 
 @media (max-width:991px) {
     .hero_wrapper {
-        padding: 20px 0px;
+        padding: 35px 0px;
     }
 }
